--- a/src/app/real-ws/plist/plist.component.html
+++ b/src/app/real-ws/plist/plist.component.html
@@ -6,6 +6,6 @@
 &nbsp;
 <mat-action-list>
   <mat-list-item *ngFor="let log of logsList" (click)="logClicked(log)" style="max-height: 40px">
-    <span style="font-size: 10px; color: #000000;"> {{log}} </span>
+      <p><i class="fa fa-database"></i> &nbsp; {{log}}</p>
   </mat-list-item>
 </mat-action-list>
