--- a/src/app/pages/content-pages/login/login-page.component.html
+++ b/src/app/pages/content-pages/login/login-page.component.html
@@ -18,7 +18,7 @@
                     height="230"
                   />
                 </div>
-                <div class="col-lg-6 col-md-12 bg-white px-4 pt-3">
+                <div class="col-lg-6 col-md-12 bg-white px-4 pt-3" (keydown)="keyDownFunction($event)">
                   <h4 class="card-title mb-2">Login</h4>
                   <p class="card-text mb-3">
                     Welcome back, please login to your account.
@@ -27,15 +27,17 @@
                     type="text"
                     class="form-control mb-3"
                     placeholder="Username"
+                    id="username0"
                   />
                   <input
                     type="password"
                     class="form-control mb-3"
                     placeholder="Password"
+                    id="password0"
                   />
                   <div class="d-flex justify-content-between mt-2">
                     <div class="remember-me">
-                      <div
+                      <!--<div
                         class="custom-control custom-checkbox custom-control-inline mb-3"
                       >
                         <input
@@ -50,38 +52,38 @@
                         >
                           Remember Me
                         </label>
-                      </div>
+                      </div>-->
                     </div>
-                    <div class="forgot-password-option">
+                    <!--<div class="forgot-password-option">
                       <a
                         [routerLink]="['/pages/forgotpassword']"
                         class="text-decoration-none text-primary"
                         >Forgot Password ?</a
                       >
-                    </div>
+                    </div>-->
                   </div>
                   <div class="fg-actions d-flex justify-content-between">
                     <div class="login-btn">
-                      <button class="btn btn-outline-primary">
+                      <!--<button class="btn btn-outline-primary">
                         <a
                           [routerLink]="['/pages/register']"
                           class="text-decoration-none"
                           >Register</a
                         >
-                      </button>
+                      </button>-->
                     </div>
                     <div class="recover-pass">
                       <button class="btn btn-primary">
                         <a
-                          [routerLink]="['/pages/login']"
+                          (click)="onSubmit($event)"
                           class="text-decoration-none text-white"
                           >Login</a
                         >
                       </button>
                     </div>
                   </div>
-                  <hr class="m-0" />
-                  <div class="d-flex justify-content-between mt-3">
+                  <!--<hr class="m-0" />-->
+                  <!--<div class="d-flex justify-content-between mt-3">
                     <div class="option-login">
                       <h6 class="text-decoration-none text-primary">
                         Or Login With
@@ -95,7 +97,7 @@
                         <span class="fa fa-twitter"></span>
                       </a>
                     </div>
-                  </div>
+                  </div>-->
                 </div>
               </div>
             </div>
