--- a/src/app/pages/content-pages/login/login-page.component.html
+++ b/src/app/pages/content-pages/login/login-page.component.html
@@ -75,7 +75,7 @@
                     <div class="recover-pass">
                       <button class="btn btn-primary">
                         <a
-                          (click)="onSubmit($event)"
+                          (click)="onSubmit()"
                           class="text-decoration-none text-white"
                           >Login</a
                         >
