--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -78,6 +78,14 @@
                                 <i class="ft-filter mr-2"></i>
                                 <span>Attributes Filter</span>
                             </a>
+                            <a class="dropdown-item" href="javascript:;" (click)="timeframeFilter()">
+                                <i class="ft-filter mr-2"></i>
+                                <span>Timeframe Filter</span>
+                            </a>
+                            <a class="dropdown-item" href="javascript:;" (click)="performanceFilter()">
+                                <i class="ft-filter mr-2"></i>
+                                <span>Performance Filter</span>
+                            </a>
                         </div>
                     </li>
                     <li class="nav-item mr-2  d-none d-lg-block">
