--- a/src/app/real-ws/performance-filter/performance-filter.component.html
+++ b/src/app/real-ws/performance-filter/performance-filter.component.html
@@ -1,3 +1,9 @@
-<p>
-  performance-filter works!
-</p>
+<h2 mat-dialog-title>Performance Filter</h2>
+<mat-dialog-content class="mat-typography">
+Minimum allowed performance(s): <input id="minimumPerformance" matInput style="width: 80px; font-size: 13px" value="1">
+Maximum allowed performance(s): <input id="maximumPerformance" matInput style="width: 80px; font-size: 13px" value="1"><br />
+</mat-dialog-content>
+<mat-dialog-actions align="end">
+  <button mat-button mat-dialog-close>Cancel</button>
+  <button mat-button [mat-dialog-close]="true" cdkFocusInitial (click)="applyFilter()">Apply</button>
+</mat-dialog-actions>
