--- a/src/app/real-ws/performance-filter/performance-filter.component.html
+++ b/src/app/real-ws/performance-filter/performance-filter.component.html
@@ -1,6 +1,7 @@
 <h2 mat-dialog-title>Performance Filter</h2>
 <mat-dialog-content class="mat-typography">
-Minimum allowed performance(s): <input id="minimumPerformance" matInput style="width: 85px; font-size: 12px" value="0">
+  <img [src]="caseDurationSvgSanitized" style='height: 250px'><br />
+  Minimum allowed performance(s): <input id="minimumPerformance" matInput style="width: 85px; font-size: 12px" value="0">
 Maximum allowed performance(s): <input id="maximumPerformance" matInput style="width: 85px; font-size: 12px" value="0"><br />
 </mat-dialog-content>
 <mat-dialog-actions align="end">
