--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -62,22 +62,6 @@
                             <p class="d-none">Filtering</p>
                         </a>
                         <div ngbDropdownMenu aria-labelledby="dropdownBasic3" class="text-left">
-                            <a class="dropdown-item" href="javascript:;" (click)="startActivitiesFilter()">
-                                <i class="ft-filter mr-2"></i>
-                                <span>Start Activities Filter</span>
-                            </a>
-                            <a class="dropdown-item" href="javascript:;" (click)="endActivitiesFilter()">
-                                <i class="ft-filter mr-2"></i>
-                                <span>End Activities Filter</span>
-                            </a>
-                            <a class="dropdown-item" href="javascript:;" (click)="variantsFilter()">
-                                <i class="ft-filter mr-2"></i>
-                                <span>Variants Filter</span>
-                            </a>
-                            <a class="dropdown-item" href="javascript:;" (click)="attributesFilter()">
-                                <i class="ft-filter mr-2"></i>
-                                <span>Attributes Filter</span>
-                            </a>
                             <a class="dropdown-item" href="javascript:;" (click)="timeframeFilter()">
                                 <i class="ft-filter mr-2"></i>
                                 <span>Timeframe Filter</span>
@@ -85,6 +69,26 @@
                             <a class="dropdown-item" href="javascript:;" (click)="performanceFilter()">
                                 <i class="ft-filter mr-2"></i>
                                 <span>Performance Filter</span>
+                            </a>
+                            <a class="dropdown-item" href="javascript:;" (click)="endActivitiesFilter()">
+                                <i class="ft-filter mr-2"></i>
+                                <span>End Activities Filter</span>
+                            </a>
+                            <a class="dropdown-item" href="javascript:;" (click)="attributesFilter()">
+                                <i class="ft-filter mr-2"></i>
+                                <span>String Attributes Filter</span>
+                            </a>
+                            <a class="dropdown-item" href="javascript:;" (click)="numericAttributeFilter()">
+                                <i class="ft-filter mr-2"></i>
+                                <span>Numeric Attributes Filter</span>
+                            </a>
+                            <a class="dropdown-item" href="javascript:;" (click)="variantsFilter()">
+                                <i class="ft-filter mr-2"></i>
+                                <span>Variants Filter</span>
+                            </a>
+                            <a class="dropdown-item" href="javascript:;" (click)="startActivitiesFilter()">
+                                <i class="ft-filter mr-2"></i>
+                                <span>Start Activities Filter</span>
                             </a>
                         </div>
                     </li>
