--- a/src/app/real-ws/plist/plist.component.html
+++ b/src/app/real-ws/plist/plist.component.html
@@ -5,7 +5,7 @@
 <p style="color: #000000">Select the process you wish to analyze:</p>
 &nbsp;
 <mat-action-list style="height: 270px; overflow-y: auto;">
-  <mat-list-item *ngFor="let log of logsList" (click)="logClicked(log)" style="max-height: 40px">
-      <p><i class="fa fa-database"></i> &nbsp; {{log}}</p>
+  <mat-list-item *ngFor="let log of logsList" (click)="logClicked(log['log_name'])" style="max-height: 40px">
+      <p><i class="fa fa-database"></i> &nbsp; {{log['log_name']}}</p>
   </mat-list-item>
 </mat-action-list>
