--- a/src/app/real-ws/pmodel/pmodel.component.html
+++ b/src/app/real-ws/pmodel/pmodel.component.html
@@ -19,6 +19,7 @@
     <mat-option value="dfg">DFG</mat-option>
     <mat-option value="tree">Process Tree (Inductive)</mat-option>
     <mat-option value="inductive">Petri (Inductive)</mat-option>
+    <mat-option value="indbpmn">BPMN (Inductive)</mat-option>
     <mat-option value="heuristics">Heuristics Net</mat-option>
   </mat-select>
   <span *ngIf="enableConformanceChecking">
