--- a/src/app/real-ws/pmodel/pmodel.component.html
+++ b/src/app/real-ws/pmodel/pmodel.component.html
@@ -22,10 +22,15 @@
     <mat-option value="indbpmn">BPMN (Inductive)</mat-option>
     <mat-option value="heuristics">Heuristics Net</mat-option>
   </mat-select>
-  <span *ngIf="enableConformanceChecking">
+  <span *ngIf="enableDownloadModel">
     <button mat-button (click)="downloadModel($event)"><span style="font-size: 10px">Download Petri Net Model</span></button>
-    <button mat-button routerLink="/real-ws/alignments"><span style="font-size: 10px">Conformance against Visualized Model</span></button>
-    <button mat-button (click)="uploader.click()"><span style="font-size: 10px">Upload model for Conformance</span></button>
+    <span *ngIf="enableBpmnDownload">
+      <button mat-button (click)="downloadBpmnModel($event)"><span style="font-size: 10px">Download BPMN Model</span></button>
+    </span>
+    <span *ngIf="enableConformanceChecking">
+      <button mat-button routerLink="/real-ws/alignments"><span style="font-size: 10px">Conformance against Visualized Model</span></button>
+      <button mat-button (click)="uploader.click()"><span style="font-size: 10px">Upload model for Conformance</span></button>
+    </span>
   </span>
 </div>
 <div id="imageContainer">
