--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -40,6 +40,12 @@
                             <p class="d-none">upload log</p>
                         </a>
                     </li>
+                    <li class="nav-item mr-2  d-none d-lg-block" *ngIf="isAdmin && isPlistPage">
+                        <a href="javascript:;" class="nav-link" id="navbar-share-log" (click)="uploader.click()">
+                            <i class="ft-share-2 font-medium-3 blue-grey darken-4"></i>
+                            <p class="d-none">Share log</p>
+                        </a>
+                    </li>
                     <li class="nav-item" ngbDropdown [placement]="placement" *ngIf="enableDownload && isProcessModelPage">
                         <a class="nav-link position-relative" id="downloadSomething" ngbDropdownToggle>
                             <i class="ft-arrow-down font-medium-3 blue-grey darken-4"></i>
