--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -41,7 +41,7 @@
                         </a>
                     </li>
                     <li class="nav-item mr-2  d-none d-lg-block" *ngIf="isAdmin && isPlistPage">
-                        <a href="javascript:;" class="nav-link" id="navbar-share-log" (click)="uploader.click()">
+                        <a href="javascript:;" class="nav-link" id="navbar-share-log" (click)="shareLog()">
                             <i class="ft-share-2 font-medium-3 blue-grey darken-4"></i>
                             <p class="d-none">Share log</p>
                         </a>
