Revised filters icons

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -69,31 +69,31 @@
                         </a>
                         <div ngbDropdownMenu aria-labelledby="dropdownBasic3" class="text-left">
                             <a class="dropdown-item" href="javascript:;" (click)="timeframeFilter()">
-                                <i class="ft-filter mr-2"></i>
+                                <i class="ft-clock mr-2"></i>
                                 <span>Timeframe Filter</span>
                             </a>
                             <a class="dropdown-item" href="javascript:;" (click)="performanceFilter()">
-                                <i class="ft-filter mr-2"></i>
+                                <i class="ft-command mr-2"></i>
                                 <span>Performance Filter</span>
                             </a>
                             <a class="dropdown-item" href="javascript:;" (click)="endActivitiesFilter()">
-                                <i class="ft-filter mr-2"></i>
+                                <i class="ft-corner-up-left mr-2"></i>
                                 <span>End Activities Filter</span>
                             </a>
                             <a class="dropdown-item" href="javascript:;" (click)="attributesFilter()">
-                                <i class="ft-filter mr-2"></i>
+                                <i class="ft-underline mr-2"></i>
                                 <span>String Attributes Filter</span>
                             </a>
                             <a class="dropdown-item" href="javascript:;" (click)="numericAttributeFilter()">
-                                <i class="ft-filter mr-2"></i>
+                                <i class="ft-percent mr-2"></i>
                                 <span>Numeric Attributes Filter</span>
                             </a>
                             <a class="dropdown-item" href="javascript:;" (click)="variantsFilter()">
-                                <i class="ft-filter mr-2"></i>
+                                <i class="ft-target mr-2"></i>
                                 <span>Variants Filter</span>
                             </a>
                             <a class="dropdown-item" href="javascript:;" (click)="startActivitiesFilter()">
-                                <i class="ft-filter mr-2"></i>
+                                <i class="ft-corner-up-right mr-2"></i>
                                 <span>Start Activities Filter</span>
                             </a>
                         </div>
