Revised log sharing view

--- a/src/app/real-ws/log-sharing/log-sharing.component.html
+++ b/src/app/real-ws/log-sharing/log-sharing.component.html
@@ -1,3 +1,6 @@
+<h2 mat-dialog-title>Log Sharing</h2>
+<mat-dialog-content class="mat-typography">
+
 <div class="sharing-container">
   Please update the sharing privileges by clicking on the corresponding checkboxs<br />
   <b>V=</b> means that the user can view, <b>D=</b> download, <b>R=</b> remove.<br />
@@ -21,9 +24,13 @@
 
 <style>
   .sharing-container {
-    height: 370px;
+    height: 320px;
     width: 780px;
     overflow: visible;
     font-size: 7pt;
   }
 </style>
+</mat-dialog-content>
+<mat-dialog-actions align="end">
+  <button mat-button mat-dialog-close>Close</button>
+</mat-dialog-actions>
