--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <!-- Sidebar Header starts -->
 <div class="sidebar-header">
     <div class="logo clearfix">
-        <a [routerLink]="['/']" class="logo-text float-left">
+        <a [routerLink]="['/real-ws/plist']" class="logo-text float-left">
             <div class="logo-img">
                 <img style="width:32px;height:32px" [src]="logoUrl" />
             </div>
