--- a/src/app/real-ws/plist/plist.component.html
+++ b/src/app/real-ws/plist/plist.component.html
@@ -6,6 +6,6 @@
 &nbsp;
 <mat-action-list style="height: 270px; overflow-y: auto;">
   <mat-list-item *ngFor="let log of logsList" (click)="logClicked(log['log_name'])" style="max-height: 40px">
-      <p><i class="fa fa-database"></i> &nbsp; {{log['log_name']}}</p>
+      <p><i class="fa fa-database"></i> &nbsp; <i class="ft-delete" *ngIf="log['can_delete']" (click)="deleteLog(log['log_name'])"></i> &nbsp; {{log['log_name']}}</p>
   </mat-list-item>
 </mat-action-list>
