Added possibility to remove an event log

--- a/src/app/real-ws/log-sharing/log-sharing.component.html
+++ b/src/app/real-ws/log-sharing/log-sharing.component.html
@@ -4,7 +4,7 @@
 <div class="sharing-container">
   Please update the sharing privileges by clicking on the corresponding checkboxs<br />
   <b>V=</b> means that the user can view, <b>D=</b> download, <b>R=</b> remove.<br />
-  Changes are authomatically closed and the window can be closed through the ESC keyboard button<br /><br />
+  Changes are authomatically saved and the window can be closed through the ESC keyboard button<br /><br />
 
   <table class="sharing-table" border="1">
     <thead>
