Adding paths filter

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -96,6 +96,10 @@
                                 <i class="ft-corner-up-right mr-2"></i>
                                 <span>Start Activities Filter</span>
                             </a>
+                            <a class="dropdown-item" href="javascript:;" (click)="pathsFilter()">
+                                <i class="ft-navigation mr-2"></i>
+                                <span>Paths Filter</span>
+                            </a>
                         </div>
                     </li>
                     <li class="nav-item mr-2  d-none d-lg-block">
