--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -19,7 +19,7 @@
         <div class="navbar-container">
             <div class="collapse navbar-collapse" id="navbarSupportedContent" [ngbCollapse]="isCollapsed">
                 <ul class="navbar-nav">
-                    <li class="nav-item mr-2  d-none d-lg-block">
+                    <li class="nav-item mr-2  d-none d-lg-block" *ngIf="!isPlistPage">
                         <mat-chip-list #chipList>
                             <mat-chip *ngFor="let filter of filters" [selectable]="true"
                                       [removable]="true" (removed)="filterService.remove(filter)">
