--- a/src/app/real-ws/pmodel/pmodel.component.html
+++ b/src/app/real-ws/pmodel/pmodel.component.html
@@ -35,7 +35,12 @@
   </span>
 </div>
 <div id="imageContainer">
+  <div [hidden]="!dotProvided" id="dotProvidedDiv">
+
+  </div>
+  <div [hidden]="dotProvided">
   <img id="imageProcessModelImage" [src]="processModelBase64Sanitized">
+  </div>
 </div>
 <input hidden type="file" #uploader
        (change)="uploadFile($event)"/>
