Added activity dashboard

--- a/src/app/real-ws/pmodel/pmodel.component.html
+++ b/src/app/real-ws/pmodel/pmodel.component.html
@@ -52,5 +52,6 @@
   <button mat-menu-item (click)="applyTracesNotContaining()">Filter cases not containing</button>
   <button mat-menu-item (click)="applyTracesStartingWith()" [hidden]="!isStartActivity">Filer cases starting with</button>
   <button mat-menu-item (click)="applyTracesEndingWith()" [hidden]="!isEndActivity">Filer cases ending with</button>
+  <button mat-menu-item (click)="openActivityDashboard()">Open activity dashboard</button>
 
 </mat-menu>
