--- a/src/app/real-ws/pmodel/pmodel.component.html
+++ b/src/app/real-ws/pmodel/pmodel.component.html
@@ -48,10 +48,11 @@
 &nbsp;
 </button>
 <mat-menu id="matMenuButton" #appMenu="matMenu" (close)="onMenuClosed()">
+  <button mat-menu-item (click)="openActivityDashboard()">Open activity dashboard</button>
   <button mat-menu-item (click)="applyTracesContaining()">Filter cases containing</button>
   <button mat-menu-item (click)="applyTracesNotContaining()">Filter cases not containing</button>
+  <button mat-menu-item (click)="filterLoop()">Filter cases with loops</button>
   <button mat-menu-item (click)="applyTracesStartingWith()" [hidden]="!isStartActivity">Filer cases starting with</button>
   <button mat-menu-item (click)="applyTracesEndingWith()" [hidden]="!isEndActivity">Filer cases ending with</button>
-  <button mat-menu-item (click)="openActivityDashboard()">Open activity dashboard</button>
 
 </mat-menu>
