--- a/src/app/real-ws/pmodel/pmodel.component.html
+++ b/src/app/real-ws/pmodel/pmodel.component.html
@@ -35,7 +35,7 @@
   </span>
 </div>
 <div id="imageContainer">
-  <div [hidden]="!dotProvided" id="dotProvidedDiv">
+  <div [hidden]="!dotProvided" id="dotProvidedDiv" src="width: 3000px; height: 3000px">
 
   </div>
   <div [hidden]="dotProvided">
