--- a/src/app/real-ws/variants/graph-variant-traces/graph-variant-traces.component.html
+++ b/src/app/real-ws/variants/graph-variant-traces/graph-variant-traces.component.html
@@ -15,57 +15,40 @@
   <div class="div-custom-padding"></div>
   <mat-divider></mat-divider>
   <div class="div-custom-padding"></div>
-  <div class="chart-container">
+  <div class="chart-container" id="chartContainer">
     <!-- chart box -->
-    <div (cdkDragStarted)="dragStarted($event)" (cdkDragEnded)="dragEnded($event)"
-         cdkDrag cdkDragBoundary=".chart-container" class="movable-box"
-         id="chartBox">
-      <div class="movable-box--content">
+    <div class="drag-box" id="chartBox"
+         cdkDrag cdkDragBoundary=".chart-container"
+         (cdkDragStarted)="dragStarted($event)" (cdkDragEnded)="dragEnded($event)"
+         ngResizable
+         rzContainment="#chartContainer">
+      <div class="drag-box--content">
         <div #chart id="chart"></div>
       </div>
-      <div class="movable-box--handler" (dblclick)="resetPosition($event)" cdkDragHandle></div>
+      <div class="drag-box--handler" (dblclick)="resetBox('chartBox')" cdkDragHandle></div>
     </div>
     <!-- legend box -->
-    <div class="movable-box" cdkDragBoundary=".chart-container"
-         id="legendBox" cdkDrag
-         (cdkDragStarted)="dragStarted($event)" (cdkDragEnded)="dragEnded($event)">
-      <div class="movable-box--content">
+    <div class="drag-box" id="legendBox"
+         cdkDrag cdkDragBoundary=".chart-container"
+         (cdkDragStarted)="dragStarted($event)" (cdkDragEnded)="dragEnded($event)"
+         ngResizable rzContainment="#chartContainer">
+      <div class="drag-box--content">
         <div *ngFor="let event of events">
           <mat-icon [style.color]="eventsForColorMapToShow.get(event)" style="font-size: 18px; display: inline; vertical-align: center;">label</mat-icon>
           <span style="line-height: 1; font-size: 12px">{{ event }}</span>
         </div>
       </div>
-      <div class="movable-box--handler" (dblclick)="resetPosition()" cdkDragHandle></div>
+      <div class="drag-box--handler" (dblclick)="resetBox('legendBox')" cdkDragHandle></div>
     </div>
     <!-- case box -->
-    <div class="movable-box" cdkDragBoundary=".chart-container"
-         id="caseBox" cdkDrag
-         (cdkDragStarted)="dragStarted($event)" (cdkDragEnded)="dragEnded($event)">
-      <div class="movable-box--content">
+    <div class="drag-box" id="caseBox"
+         cdkDrag cdkDragBoundary=".chart-container"
+         (cdkDragStarted)="dragStarted($event)" (cdkDragEnded)="dragEnded($event)"
+         ngResizable rzContainment="#chartContainer">
+      <div class="drag-box--content">
         <app-graph-cases [cases]="cases" class="appGraphCases"></app-graph-cases>
       </div>
-      <div class="movable-box--handler" (dblclick)="resetPosition()" cdkDragHandle></div>
+      <div class="drag-box--handler" (dblclick)="resetBox('caseBox')" cdkDragHandle></div>
     </div>
   </div>
 </div>
-
-
-
-
-
-
-
-
-
-<!--
-<div class="row">
-  <div class="col-sm-7">
-    <div #chart id="chart"></div>
-  </div>
-  <div class="col-sm-5">
-    <div id="case-explorer">
-      <app-graph-cases [cases]="cases" class="appGraphCase"></app-graph-cases>
-    </div>
-  </div>
-</div>
--->
