--- a/src/app/real-ws/variants/graph-variant-traces/graph-variant-traces.component.scss
+++ b/src/app/real-ws/variants/graph-variant-traces/graph-variant-traces.component.scss
@@ -64,7 +64,6 @@
 .chart-container {
   width: 100%;
   height: 100vh;
-  overflow-y: auto;
   position: relative;
   display: inline-flex;
   display: -ms-inline-flexbox;
@@ -75,7 +74,7 @@
   padding: 0 10px 0 10px;
 }
 
-.movable-box {
+.drag-box {
   width: 200px;
   height: 200px;
   padding: 10px 10px 10px 0px;
@@ -85,7 +84,9 @@
   text-align: center;
   background: #fff;
   border-radius: 4px;
-  position: relative;
+  position: absolute;
+  top:0;
+  left: 0;
   transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
   box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
   0 2px 2px 0 rgba(0, 0, 0, 0.14),
@@ -94,13 +95,13 @@
   flex-direction: column;
 }
 
-.movable-box:active {
+.drag-box:active {
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
   0 8px 10px 1px rgba(0, 0, 0, 0.14),
   0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
-.movable-box--content {
+.drag-box--content {
   position: relative;
   left: 0;
   top: 0;
@@ -108,7 +109,7 @@
   overflow: auto;
 }
 
-.movable-box--handler {
+.drag-box--handler {
   position: absolute;
   top: 0;
   background-color: #dcdcdc;
@@ -118,27 +119,36 @@
 }
 
 #chartBox {
-  width: 50%;
+  width: fit-content;
   height: fit-content;
-  max-height: 80vh;
-  position: relative;
+  max-height: 70vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
   z-index: 10;
 }
 
 #legendBox {
-  width: 500px;
-  position: relative;
+  width: fit-content;
+  min-width: 200px;
+  min-height: 200px;
+  position: absolute;
   text-align: left;
+  top: 0;
+  left: 45%;
+  right: 0;
   z-index: 30;
   height: fit-content;
-  min-height: 200px;
-  overflow: auto;
 }
 
 #caseBox {
   width: 40%;
   height: fit-content;
   min-height: 200px;
-  position: relative;
+  position: absolute;
   z-index: 20;
+  top: 0;
+  left: 60%;
+  right: 0;
 }
