--- a/src/app/real-ws/variants/graph-variant-traces/graph-variant-traces.component.scss
+++ b/src/app/real-ws/variants/graph-variant-traces/graph-variant-traces.component.scss
@@ -18,6 +18,14 @@
   cursor: pointer;
 }
 
+svg > g > text {
+  max-width: 55px;
+  height: 30px;
+  font-size: 0.8rem;
+  fill: #fff;
+}
+
+
 .div-custom-padding {
   height: 12px;
 }
