--- a/src/app/real-ws/dottedchart/dottedchart.component.html
+++ b/src/app/real-ws/dottedchart/dottedchart.component.html
@@ -1,4 +1,5 @@
-<span>
+<div class="row">
+  <div class="col-3">
   Attribute X:
     <mat-select placeholder="Attribute X" [(value)]="attribute_x" (selectionChange)="selectedAttributeXChanged($event)">
     <mat-option
@@ -6,7 +7,9 @@
             value="{{ option }}">
       {{ option }}
     </mat-option>
-  </mat-select>
+    </mat-select>
+  </div>
+  <div class="col-3">
     &nbsp; Attribute Y:
     <mat-select placeholder="Attribute Y" [(value)]="attribute_y" (selectionChange)="selectedAttributeYChanged($event)">
     <mat-option
@@ -14,7 +17,10 @@
             value="{{ option }}">
       {{ option }}
     </mat-option>
-  </mat-select>
+    </mat-select>
+
+  </div>
+  <div class="col-3">
       &nbsp; Attribute Color:
     <mat-select placeholder="Attribute Color" [(value)]="attribute_color" (selectionChange)="selectedAttributeColorChanged($event)">
     <mat-option
@@ -23,6 +29,11 @@
       {{ option }}
     </mat-option>
   </mat-select>
-
-</span>
+  </div>
+  <div class="col-3">
+    <button (click)="getEventsForDotted()">Draw Dotted</button>
+  </div>
+</div>
+<div *ngIf="graph_defined">
 <plotly-plot [data]="graph.data" [layout]="graph.layout"></plotly-plot>
+</div>
