Revised process model component. Configured variants component

--- a/src/app/real-ws/variants/graph-variant-traces/graph-variant-traces.component.html
+++ b/src/app/real-ws/variants/graph-variant-traces/graph-variant-traces.component.html
@@ -10,7 +10,7 @@
       </mat-chip>
     </mat-chip-list>
     <div class="vertical-divider"></div>
-    <mat-chip #chipRef="matChip" (click)="showLegend(chipRef)" color="primary" selected>Legend</mat-chip>
+    <mat-chip #chipRef="matChip" (click)="showLegend(chipRef)" color="primary">Legend</mat-chip>
   </mat-toolbar>
   <div class="div-custom-padding"></div>
   <mat-divider></mat-divider>
