--- a/src/app/real-ws/variants/graph-cases/graph-cases.component.html
+++ b/src/app/real-ws/variants/graph-cases/graph-cases.component.html
@@ -11,11 +11,11 @@
     </ng-container>
     <ng-container  matColumnDef="startTime">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Start time</th>
-      <td mat-cell *matCellDef="let case"> {{ case.startTime | date:'medium'}} </td>
+      <td mat-cell *matCellDef="let case"> {{ case.startTime * 1000 | date:'medium'}} </td>
     </ng-container>
     <ng-container  matColumnDef="endTime">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>End time</th>
-      <td mat-cell *matCellDef="let case"> {{ case.endTime  | date:'medium'}} </td>
+      <td mat-cell *matCellDef="let case"> {{ case.endTime * 1000  | date:'medium'}} </td>
     </ng-container>
 
     <!-- Expanded Content Column -->
