--- a/src/app/real-ws/timeframe-filter/timeframe-filter.component.html
+++ b/src/app/real-ws/timeframe-filter/timeframe-filter.component.html
@@ -1,6 +1,7 @@
 <h2 mat-dialog-title>Timeframe Filter</h2>
 <mat-dialog-content class="mat-typography">
-  <img [src]="eventsPerTimeSvgSanitized" style='height: 230px'><br />
+  <div id="timeframe_plot" style="height:250px;width: 600px"></div>
+  <!--<img [src]="eventsPerTimeSvgSanitized" style='height: 230px'><br />-->
   Select the filtering method:<br />
 <mat-select placeholder="Selected method" [(value)]="filteringMethod">
   <mat-option value="timestamp_trace_intersecting">Traces (intersecting)</mat-option>
@@ -10,8 +11,8 @@
 
 <br /><br />
 
-  Interval start point: <input id="minimumTimestamp" matInput style="width: 130px; font-size: 12px" value="-1">
-  Interval end point: <input id="maximumTimestamp" matInput style="width: 130px; font-size: 12px" value="-1"><br />
+  Interval start point: <input id="minimumTimestamp" matInput style="width: 120px; font-size: 12px" value="-1">
+  Interval end point: <input id="maximumTimestamp" matInput style="width: 120px; font-size: 12px" value="-1"><br />
 
 </mat-dialog-content>
 <mat-dialog-actions align="end">
